# SiMBA-

./: .gitignore  BitwiseList.h  CMakeLists.txt  CSiMBA.cpp  CSiMBA.h  CSimplifyGeneral.h  GeneralSimpifier.h  LLVMParser.cpp  LLVMParser.h  MBAChecker.cpp  MBAChecker.h  Modulo.cpp  Modulo.h  README.md  ShuttingYard.cpp  ShuttingYard.h  SiMBAPass.cpp  SiMBAPass.h  Simplifier.cpp  Simplifier.h  Z3Prover.cpp  Z3Prover.h
.github/workflows/: cmake.yml
data/: pldi_dataset_linear_MBA.txt  pldi_dataset_nonpoly_MBA.txt  pldi_dataset_poly_MBA.txt  test_data.csv
evaluation/: check_mba.c  check_mba.ll  check_mba_lifted.ll  check_mba_lifted_simba.ll  check_mba_simp.ll  check_oc.c  check_oc.ll  check_oc_simp.ll  check_poly.c  check_poly.ll  check_poly_simp.ll  linear_mba.c  linear_mba.ll  linear_mba_simp.ll  log.txt
evaluation/openssl-3.0.8/: log.txt
evaluation/saturn/: deobfuscate.py  linear_mba  linear_mba.c  linear_mba.ll  linear_mba_deobf.ll  log.txt
include/: splitmix64.h  veque.h
llvm/: MBA_OP.ll  mba_comb.c  mba_comb.ll  mbas.c  mbas.ll  scramble4.c  scramble4.ll  vm_obf.c  vm_obf.ll  vm_obf_simp_full.ll  xor_op_pred.c  xor_op_pred.ll
scripts/: convert_bitwise_list_to_vector.py  convert_data_to_llvm.py
tests/: run_tests.py  run_tests_llvm.py  run_tests_llvm_simplify.py
